--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bootstrap demo</title>
 
     <!-- CSS -->
-     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
 
     <!-- Bootstrap cdn -->
@@ -22,26 +22,36 @@
 
         <!-- Logo -->
         <div class="logo">
+            <h3>Mobile</h3>
+            <span>World</span>
 
         </div>
 
         <!-- Search bar -->
-        <div class="search-bar"></div>
+        <div class="search-bar">
+            <input type="text" placeholder="Search your mobile">
+            <div class="icon"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></div>
+        </div>
 
         <!-- Icons -->
-         <div class="icons">
+        <div class="icons">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-cart-shopping"></i>
 
-         </div>
+        </div>
     </header>
 
     <h1>Hello, world!</h1>
 
 
+    <!-- Font Awsome -->
+    <script src="https://kit.fontawesome.com/0f509bf410.js" crossorigin="anonymous"></script>
 
     <!-- script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
