Changing a website title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>task05-html-css-responsive-product-catalogue-website</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
