--- a/index.html
+++ b/index.html
@@ -41,7 +41,25 @@
         </div>
     </header>
 
-    <h1>Hello, world!</h1>
+    <section class="banner">
+        <div class="container my-5">
+            <div class="row">
+                <h4 class="text-center">Smart Phones</h4>
+
+                <div class="col-2">
+                    <div class="card border-none">
+                        <img src="./images/one-plus.png"  alt="...">
+                    
+                        <div class="card-body  p-0 m-0">
+                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                            <p class="m-0  text-center">256GB 12GB</p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+    </section>
 
 
     <!-- Font Awsome -->
