--- a/index.html
+++ b/index.html
@@ -41,23 +41,81 @@
         </div>
     </header>
 
-    <section class="banner">
+    <section class="cards-section">
         <div class="container my-5">
-            <div class="row">
-                <h4 class="text-center">Smart Phones</h4>
+            <div class="row ">
+                <h4 class="text-center  ">Smart Phones</h4>
 
-                <div class="col-2">
-                    <div class="card border-none">
-                        <img src="./images/one-plus.png"  alt="...">
-                    
+
+                <!-- Singel Card -->
+                <div class="col-sm-3 col-md-4 col-lg-2 my-5">
+                    <div class="card ">
+                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
+
                         <div class="card-body  p-0 m-0">
                             <p class="m-0 fw-semibold text-center">OnePlus 9</p>
                             <p class="m-0  text-center">256GB 12GB</p>
                         </div>
                     </div>
-
-
                 </div>
+
+                
+                <div class="col-sm-6 col-md-4 col-lg-2 my-5">
+                    <div class="card border-none">
+                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
+
+                        <div class="card-body  p-0 m-0">
+                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                            <p class="m-0  text-center">256GB 12GB</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 col-lg-2 my-5">
+                    <div class="card border-none">
+                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
+
+                        <div class="card-body  p-0 m-0">
+                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                            <p class="m-0  text-center">256GB 12GB</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 col-lg-2 my-5">
+                    <div class="card border-none">
+                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
+
+                        <div class="card-body  p-0 m-0">
+                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                            <p class="m-0  text-center">256GB 12GB</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 col-lg-2 my-5">
+                    <div class="card border-none">
+                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
+
+                        <div class="card-body  p-0 m-0">
+                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                            <p class="m-0  text-center">256GB 12GB</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 col-lg-2 my-5">
+                    <div class="card border-none">
+                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
+
+                        <div class="card-body  p-0 m-0">
+                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                            <p class="m-0  text-center">256GB 12GB</p>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
     </section>
 
