--- a/index.html
+++ b/index.html
@@ -43,80 +43,70 @@
 
     <section class="cards-section">
         <div class="container my-5">
+
             <div class="row ">
                 <h4 class="text-center  ">Smart Phones</h4>
-
-
                 <!-- Singel Card -->
-                <div class="col-sm-3 col-md-4 col-lg-2 my-5">
-                    <div class="card ">
-                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
+                <div class="card col-md-4 col-lg-2 my-5">
+                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
 
-                        <div class="card-body  p-0 m-0">
-                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                            <p class="m-0  text-center">256GB 12GB</p>
-                        </div>
+                    <div class="card-body  p-0 m-0">
+                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                        <p class="m-0  text-center">256GB 12GB</p>
                     </div>
                 </div>
 
-                
-                <div class="col-sm-6 col-md-4 col-lg-2 my-5">
-                    <div class="card border-none">
-                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
+                <div class="card  col-md-4 col-lg-2 my-5">
+                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
 
-                        <div class="card-body  p-0 m-0">
-                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                            <p class="m-0  text-center">256GB 12GB</p>
-                        </div>
+                    <div class="card-body  p-0 m-0">
+                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                        <p class="m-0  text-center">256GB 12GB</p>
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 col-lg-2 my-5">
-                    <div class="card border-none">
-                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
 
-                        <div class="card-body  p-0 m-0">
-                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                            <p class="m-0  text-center">256GB 12GB</p>
-                        </div>
+                <div class="card  col-md-4 col-lg-2 my-5">
+                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
+
+                    <div class="card-body  p-0 m-0">
+                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                        <p class="m-0  text-center">256GB 12GB</p>
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 col-lg-2 my-5">
-                    <div class="card border-none">
-                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
 
-                        <div class="card-body  p-0 m-0">
-                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                            <p class="m-0  text-center">256GB 12GB</p>
-                        </div>
+                <div class="card  col-md-4 col-lg-2 my-5">
+                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
+
+                    <div class="card-body  p-0 m-0">
+                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                        <p class="m-0  text-center">256GB 12GB</p>
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 col-lg-2 my-5">
-                    <div class="card border-none">
-                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
 
-                        <div class="card-body  p-0 m-0">
-                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                            <p class="m-0  text-center">256GB 12GB</p>
-                        </div>
+                <div class="card  col-md-4 col-lg-2 my-5">
+                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
+
+                    <div class="card-body  p-0 m-0">
+                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                        <p class="m-0  text-center">256GB 12GB</p>
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 col-lg-2 my-5">
-                    <div class="card border-none">
-                        <img src="./images/one-plus.png "class="img-fluid" alt="...">
+                <div class="card  col-md-4 col-lg-2 my-5">
+                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
 
-                        <div class="card-body  p-0 m-0">
-                            <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                            <p class="m-0  text-center">256GB 12GB</p>
-                        </div>
+                    <div class="card-body  p-0 m-0">
+                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
+                        <p class="m-0  text-center">256GB 12GB</p>
                     </div>
                 </div>
-
 
             </div>
+        </div>
+
     </section>
 
 
