Fix card sizing

--- a/index.html
+++ b/index.html
@@ -45,64 +45,57 @@
         <div class="container my-5">
 
             <div class="row ">
-                <h4 class="text-center  ">Smart Phones</h4>
-                <!-- Singel Card -->
-                <div class="card col-md-4 col-lg-2 my-5">
-                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
+                <h4 class="text-center display-6">Smart Phones</h4>
 
-                    <div class="card-body  p-0 m-0">
-                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                        <p class="m-0  text-center">256GB 12GB</p>
+                <div class="card col-md-3 col-lg-2 my-5" >
+                    <img class="card-img-top" src="./images/one-plus.png">
+                    <div class="card-body">
+                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
+                        <p class="card-text text-center fw-semibold ">256GB 12GB</p>
                     </div>
                 </div>
 
-                <div class="card  col-md-4 col-lg-2 my-5">
-                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
+                <div class="card col-md-3 col-lg-2 my-5" >
+                    <img class="card-img-top" src="./images/one-plus.png">
+                    <div class="card-body">
+                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
+                        <p class="card-text text-center fw-semibold ">256GB 12GB</p>
+                    </div>
+                </div>
 
-                    <div class="card-body  p-0 m-0">
-                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                        <p class="m-0  text-center">256GB 12GB</p>
+                <div class="card col-md-3 col-lg-2 my-5" >
+                    <img class="card-img-top" src="./images/one-plus.png">
+                    <div class="card-body">
+                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
+                        <p class="card-text text-center fw-semibold ">256GB 12GB</p>
+                    </div>
+                </div>
+
+                <div class="card col-md-3 col-lg-2 my-5" >
+                    <img class="card-img-top" src="./images/one-plus.png">
+                    <div class="card-body">
+                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
+                        <p class="card-text text-center fw-semibold ">256GB 12GB</p>
+                    </div>
+                </div>
+
+                <div class="card col-md-3 col-lg-2 my-5" >
+                    <img class="card-img-top" src="./images/one-plus.png">
+                    <div class="card-body">
+                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
+                        <p class="card-text text-center fw-semibold ">256GB 12GB</p>
+                    </div>
+                </div>
+
+                <div class="card col-md-3 col-lg-2 my-5" >
+                    <img class="card-img-top" src="./images/one-plus.png">
+                    <div class="card-body">
+                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
+                        <p class="card-text text-center fw-semibold ">256GB 12GB</p>
                     </div>
                 </div>
 
 
-                <div class="card  col-md-4 col-lg-2 my-5">
-                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
-
-                    <div class="card-body  p-0 m-0">
-                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                        <p class="m-0  text-center">256GB 12GB</p>
-                    </div>
-                </div>
-
-
-                <div class="card  col-md-4 col-lg-2 my-5">
-                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
-
-                    <div class="card-body  p-0 m-0">
-                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                        <p class="m-0  text-center">256GB 12GB</p>
-                    </div>
-                </div>
-
-
-                <div class="card  col-md-4 col-lg-2 my-5">
-                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
-
-                    <div class="card-body  p-0 m-0">
-                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                        <p class="m-0  text-center">256GB 12GB</p>
-                    </div>
-                </div>
-
-                <div class="card  col-md-4 col-lg-2 my-5">
-                    <img src="./images/one-plus.png " class="img-fluid" alt="...">
-
-                    <div class="card-body  p-0 m-0">
-                        <p class="m-0 fw-semibold text-center">OnePlus 9</p>
-                        <p class="m-0  text-center">256GB 12GB</p>
-                    </div>
-                </div>
 
             </div>
         </div>
