Complete Smart Watches Section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
 
+    <!-- Header  -->
     <header>
 
         <!-- Logo -->
@@ -41,13 +42,14 @@
         </div>
     </header>
 
+    <!-- Cards Section -->
     <section class="cards-section">
         <div class="container my-5">
 
             <div class="row ">
-                <h4 class="text-center display-6">Smart Phones</h4>
+                <h1 class="text-center display-6">Smart Phones</h1>
 
-                <div class="card col-md-3 col-lg-2 my-5" >
+                <div class="card col-md-3 col-lg-2 my-5">
                     <img class="card-img-top" src="./images/one-plus.png">
                     <div class="card-body">
                         <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
@@ -55,7 +57,7 @@
                     </div>
                 </div>
 
-                <div class="card col-md-3 col-lg-2 my-5" >
+                <div class="card col-md-3 col-lg-2 my-5">
                     <img class="card-img-top" src="./images/one-plus.png">
                     <div class="card-body">
                         <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
@@ -63,7 +65,7 @@
                     </div>
                 </div>
 
-                <div class="card col-md-3 col-lg-2 my-5" >
+                <div class="card col-md-3 col-lg-2 my-5">
                     <img class="card-img-top" src="./images/one-plus.png">
                     <div class="card-body">
                         <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
@@ -71,7 +73,7 @@
                     </div>
                 </div>
 
-                <div class="card col-md-3 col-lg-2 my-5" >
+                <div class="card col-md-3 col-lg-2 my-5">
                     <img class="card-img-top" src="./images/one-plus.png">
                     <div class="card-body">
                         <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
@@ -79,7 +81,7 @@
                     </div>
                 </div>
 
-                <div class="card col-md-3 col-lg-2 my-5" >
+                <div class="card col-md-3 col-lg-2 my-5">
                     <img class="card-img-top" src="./images/one-plus.png">
                     <div class="card-body">
                         <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
@@ -87,7 +89,7 @@
                     </div>
                 </div>
 
-                <div class="card col-md-3 col-lg-2 my-5" >
+                <div class="card col-md-3 col-lg-2 my-5">
                     <img class="card-img-top" src="./images/one-plus.png">
                     <div class="card-body">
                         <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
@@ -102,6 +104,102 @@
 
     </section>
 
+
+    <!-- Laptops -->
+    <section class="laptop-section">
+        <div class="container">
+            <div class="row">
+                <h4 class="text-center display-6 ">Laptops</h4>
+
+                <!-- Singel Card -->
+                <div class="card col-lg-3 col-md-6 my-5 pt-4">
+                    <img src="./images/laptop.png" class="card-img-top">
+                    <div class="card-body">
+                        <p class="text-center fw-bold py-2 m-0">Microsft Surface 3</p>
+                        <p class="text-center fw-semibold py-0 m-0">256GB SSD 16GB RAM</p>
+                    </div>
+                </div>
+
+                <div class="card col-lg-3 col-md-6 my-5 pt-4">
+                    <img src="./images/laptop.png" class="card-img-top">
+                    <div class="card-body">
+                        <p class="text-center fw-bold py-2 m-0">dell xps 15</p>
+                        <p class="text-center fw-semibold py-0 m-0">256GB SSD 16GB RAM</p>
+                    </div>
+                </div>
+
+                <div class="card col-lg-3 col-md-6 my-5 pt-4">
+                    <img src="./images/mac book.png" class="card-img-top ">
+                    <div class="card-body">
+                        <p class="text-center fw-bold py-2 m-0">macbook pro 14</p>
+                        <p class="text-center fw-semibold py-0 m-0">256GB SSD 16GB RAM</p>
+                    </div>
+                </div>
+
+                <div class="card col-lg-3 col-md-6 my-5 pt-4">
+                    <img src="./images/laptop.png" class="card-img-top">
+                    <div class="card-body">
+                        <p class="text-center fw-bold py-2 m-0">hp pavilion 20</p>
+                        <p class="text-center fw-semibold  py-0 m-0">256GB SSD 16GB RAM</p>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+
+    </section>
+
+
+    <!-- Smart Watches -->
+    <section class="smart-watches">
+        <div class="container">
+            <div class="row justify-content-between">
+                <h1 class="display-6 text-center">Smart Watches</h1>
+
+                <!-- Singel Watch -->
+                <div class="col-sm-8 col-md-5 col-lg-5 cols ">
+                    <div class="card ">
+                        <img src="./images/smart-watch.png" class="img-fluid">
+                        <div class="card-bod">
+                            <p class="card-text">OPPO Band Style 1.1-inch AMOLED Screen</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-8 col-md-5  col-lg-5 cols ">
+                    <div class="card ">
+                        <img src="./images/smart-watch.png" class="img-fluid">
+                        <div class="card-bod">
+                            <p class="card-text">OPPO Band Style 1.1-inch AMOLED Screen</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-12 col-md-5 col-lg-5 cols ">
+                    <div class="card ">
+                        <img src="./images/smart-watch.png" class="img-fluid">
+                        <div class="card-bod">
+                            <p class="card-text">OPPO Band Style 1.1-inch AMOLED Screen</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-8 col-md-5 col-lg-5 cols ">
+                    <div class="card ">
+                        <img src="./images/smart-watch.png" class="img-fluid">
+                        <div class="card-bod">
+                            <p class="card-text">OPPO Band Style 1.1-inch AMOLED Screen</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <!-- Font Awsome -->
     <script src="https://kit.fontawesome.com/0f509bf410.js" crossorigin="anonymous"></script>
