Footer is created

--- a/index.html
+++ b/index.html
@@ -201,6 +201,19 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row fs-5">
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-square-twitter"></i>
+                <i class="fa-brands fa-square-github"></i>
+            </div>
+
+        </div>
+    </footer>
+
     <!-- Font Awsome -->
     <script src="https://kit.fontawesome.com/0f509bf410.js" crossorigin="anonymous"></script>
 
