--- a/index.html
+++ b/index.html
@@ -204,14 +204,21 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <div class="row fs-5">
-                <i class="fa-brands fa-square-facebook"></i>
-                <i class="fa-brands fa-square-instagram"></i>
-                <i class="fa-brands fa-square-twitter"></i>
-                <i class="fa-brands fa-square-github"></i>
+            <div class="row fs-4">
+                <div class="col-lg-12 text-center ">
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-square-twitter"></i>
+                    <i class="fa-brands fa-square-github"></i>
+
+                </div>
             </div>
 
         </div>
+        
+                <div class="sub">
+                    <p class="text-center">Desgin by Dev Fahad Khan</p>
+                </div>
     </footer>
 
     <!-- Font Awsome -->
