--- a/index.html
+++ b/index.html
@@ -42,6 +42,27 @@
         </div>
     </header>
 
+    <section class="banner-section">
+        <div class="container-fluid">
+            <div class="row justify-content-evenly">
+                <div class="col-lg-2">
+                    <nav>
+                        <ul class="unorder-list">
+                            <span>All Catagories</span>
+                            <li><a href="#">Smart Phone</a></li>
+                            <li><a href="#">Laptops</a></li>
+                            <li><a href="#">Watches</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="banner col-lg-9">
+                    <!-- IMG -->
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Cards Section -->
     <section class="cards-section">
         <div class="container my-5">
@@ -215,10 +236,10 @@
             </div>
 
         </div>
-        
-                <div class="sub">
-                    <p class="text-center">Desgin by Dev Fahad Khan</p>
-                </div>
+
+        <div class="sub">
+            <p class="text-center">Desgin by Dev Fahad Khan</p>
+        </div>
     </footer>
 
     <!-- Font Awsome -->
