--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="banner-section">
         <div class="container-fluid">
             <div class="row justify-content-evenly">
-                <div class="col-lg-2">
+                <div class="colg-sm-4 col-md-4 col-lg-2 ">
                     <nav>
                         <ul class="unorder-list">
                             <span>All Catagories</span>
@@ -56,8 +56,7 @@
                     </nav>
                 </div>
 
-                <div class="banner col-lg-9">
-                    <!-- IMG -->
+                <div class="banner col-sm-4 col-md-8 col-lg-9 ">
                 </div>
             </div>
         </div>
