--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="responsive.css">
 
     <!-- Bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
