--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </section>
 
-    <!-- Cards Section -->
+    <!-- Mobiles Section -->
     <section class="cards-section">
         <div class="container my-5">
 
@@ -80,9 +80,17 @@
                 </div>
 
                 <div class="card col-md-3 col-lg-2 my-5">
-                    <img class="card-img-top" src="./images/one-plus.png">
+                    <img class="card-img-top" src="./images/a32-Photoroom.png">
                     <div class="card-body">
-                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
+                        <p class="card-text text-center py-1 m-0 fw-bold">Samsung A32</p>
+                        <p class="card-text text-center fw-semibold ">256GB 12GB</p>
+                    </div>
+                </div>
+
+                <div class="card col-md-3 col-lg-2 my-5">
+                    <img class="card-img-top" src="./images/732-Photoroom.png">
+                    <div class="card-body">
+                        <p class="card-text text-center py-1 m-0 fw-bold">Samsung a17</p>
                         <p class="card-text text-center fw-semibold ">256GB 12GB</p>
                     </div>
                 </div>
@@ -90,23 +98,15 @@
                 <div class="card col-md-3 col-lg-2 my-5">
                     <img class="card-img-top" src="./images/one-plus.png">
                     <div class="card-body">
-                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
+                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 10pro</p>
                         <p class="card-text text-center fw-semibold ">256GB 12GB</p>
                     </div>
                 </div>
 
                 <div class="card col-md-3 col-lg-2 my-5">
-                    <img class="card-img-top" src="./images/one-plus.png">
+                    <img class="card-img-top" src="./images/a32-Photoroom.png">
                     <div class="card-body">
-                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
-                        <p class="card-text text-center fw-semibold ">256GB 12GB</p>
-                    </div>
-                </div>
-
-                <div class="card col-md-3 col-lg-2 my-5">
-                    <img class="card-img-top" src="./images/one-plus.png">
-                    <div class="card-body">
-                        <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
+                        <p class="card-text text-center py-1 m-0 fw-bold">Samsung A32</p>
                         <p class="card-text text-center fw-semibold ">256GB 12GB</p>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                 </div>
 
                 <div class="card col-lg-3 col-md-6 my-5 pt-4">
-                    <img src="./images/laptop.png" class="card-img-top">
+                    <img src="./images/hp-1.png " class="card-img-top">
                     <div class="card-body">
                         <p class="text-center fw-bold py-2 m-0">dell xps 15</p>
                         <p class="text-center fw-semibold py-0 m-0">256GB SSD 16GB RAM</p>
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="card col-lg-3 col-md-6 my-5 pt-4">
-                    <img src="./images/mac book.png" class="card-img-top ">
+                    <img src="./images/mac.png" class="card-img-top ">
                     <div class="card-body">
                         <p class="text-center fw-bold py-2 m-0">macbook pro 14</p>
                         <p class="text-center fw-semibold py-0 m-0">256GB SSD 16GB RAM</p>
@@ -159,7 +159,7 @@
                 </div>
 
                 <div class="card col-lg-3 col-md-6 my-5 pt-4">
-                    <img src="./images/laptop.png" class="card-img-top">
+                    <img src="./images/ttt-Photoroom.png" class="card-img-top">
                     <div class="card-body">
                         <p class="text-center fw-bold py-2 m-0">hp pavilion 20</p>
                         <p class="text-center fw-semibold  py-0 m-0">256GB SSD 16GB RAM</p>
@@ -183,7 +183,7 @@
                 <!-- Singel Watch -->
                 <div class="col-sm-8 col-md-5 col-lg-5 cols ">
                     <div class="card ">
-                        <img src="./images/smart-watch.png" class="img-fluid">
+                        <img src="./images/oppo.png" class="img-fluid">
                         <div class="card-bod">
                             <p class="card-text">OPPO Band Style 1.1-inch AMOLED Screen</p>
                         </div>
@@ -192,7 +192,7 @@
 
                 <div class="col-sm-8 col-md-5  col-lg-5 cols ">
                     <div class="card ">
-                        <img src="./images/smart-watch.png" class="img-fluid">
+                        <img src="./images/oppo.png" class="img-fluid">
                         <div class="card-bod">
                             <p class="card-text">OPPO Band Style 1.1-inch AMOLED Screen</p>
                         </div>
@@ -202,9 +202,9 @@
 
                 <div class="col-sm-12 col-md-5 col-lg-5 cols ">
                     <div class="card ">
-                        <img src="./images/smart-watch.png" class="img-fluid">
+                        <img src="./images/81vW0jAzVfL._AC_SL1500_-Photoroom.png" class="img-fluid" style="object-fit: contain;">
                         <div class="card-bod">
-                            <p class="card-text">OPPO Band Style 1.1-inch AMOLED Screen</p>
+                            <p class="card-text">SAMSUNG Galaxy Watch (46mm, GPS, Bluetooth)  Silver/Black (US Version)</p>
                         </div>
                     </div>
                 </div>
@@ -212,9 +212,9 @@
 
                 <div class="col-sm-8 col-md-5 col-lg-5 cols ">
                     <div class="card ">
-                        <img src="./images/smart-watch.png" class="img-fluid">
+                        <img src="./images/81vW0jAzVfL._AC_SL1500_-Photoroom.png" class="img-fluid" style="object-fit: contain;">
                         <div class="card-bod">
-                            <p class="card-text">OPPO Band Style 1.1-inch AMOLED Screen</p>
+                            <p class="card-text">SAMSUNG Galaxy Watch (46mm, GPS, Bluetooth)  Silver/Black (US Version)</p>
                         </div>
                     </div>
                 </div>
