adding shadow on All  cards

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row ">
                 <h1 class="text-center display-6">Smart Phones</h1>
 
-                <div class="card col-md-3 col-lg-2 my-5">
+                <div class="card col-md-3 col-lg-2 my-5 card-shadow">
                     <img class="card-img-top" src="./images/one-plus.png">
                     <div class="card-body">
                         <p class="card-text text-center py-1 m-0 fw-bold">OnePlus 9</p>
@@ -127,7 +127,7 @@
     </section>
 
 
-    <!-- Laptops -->
+    <!-- Laptops Section -->
     <section class="laptop-section">
         <div class="container">
             <div class="row">
@@ -174,7 +174,7 @@
     </section>
 
 
-    <!-- Smart Watches -->
+    <!-- Smart Watches Section -->
     <section class="smart-watches">
         <div class="container">
             <div class="row justify-content-between">
