Changing shadow color

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
                 <div class="card col-md-3 col-lg-2 my-5">
                     <img class="card-img-top" src="./images/a32-Photoroom.png">
-                    <div class="card-body">
+                    <div class="card-body ">
                         <p class="card-text text-center py-1 m-0 fw-bold">Samsung A32</p>
-                        <p class="card-text text-center fw-semibold ">256GB 12GB</p>
+                        <p class="card-text text-center fw-semibold  ">256GB 12GB</p>
                     </div>
                 </div>
 
@@ -202,9 +202,11 @@
 
                 <div class="col-sm-12 col-md-5 col-lg-5 cols ">
                     <div class="card ">
-                        <img src="./images/81vW0jAzVfL._AC_SL1500_-Photoroom.png" class="img-fluid" style="object-fit: contain;">
+                        <img src="./images/81vW0jAzVfL._AC_SL1500_-Photoroom.png" class="img-fluid"
+                            style="object-fit: contain;">
                         <div class="card-bod">
-                            <p class="card-text">SAMSUNG Galaxy Watch (46mm, GPS, Bluetooth)  Silver/Black (US Version)</p>
+                            <p class="card-text">SAMSUNG Galaxy Watch (46mm, GPS, Bluetooth) Silver/Black (US Version)
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -212,9 +214,11 @@
 
                 <div class="col-sm-8 col-md-5 col-lg-5 cols ">
                     <div class="card ">
-                        <img src="./images/81vW0jAzVfL._AC_SL1500_-Photoroom.png" class="img-fluid" style="object-fit: contain;">
+                        <img src="./images/81vW0jAzVfL._AC_SL1500_-Photoroom.png" class="img-fluid"
+                            style="object-fit: contain;">
                         <div class="card-bod">
-                            <p class="card-text">SAMSUNG Galaxy Watch (46mm, GPS, Bluetooth)  Silver/Black (US Version)</p>
+                            <p class="card-text">SAMSUNG Galaxy Watch (46mm, GPS, Bluetooth) Silver/Black (US Version)
+                            </p>
                         </div>
                     </div>
                 </div>
